--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body{
 .navbar ul li a{
     padding: 9px;
     text-decoration: none;
-    color: #fff;
+    color: white;
     font-size: 20px;
     transition: 1s;
 }
@@ -45,7 +45,7 @@ body{
 
 .content{
     position: absolute;
-    color: #fff;
+    color: white;
     margin-top: 8%;
     margin-left: 35%;
 }
@@ -63,7 +63,7 @@ body{
     margin-left: 30px;
     padding: 15px;
     text-decoration: none;
-    color: #fff;
+    color: white;
     font-size: 18px;
     background-color: green
 }
@@ -98,8 +98,8 @@ body{
 .content2{
     flex-basis: 50%;
     position: absolute;
-    left: 20%;
-    top: 65%;
+    left:30%;
+    top:65%;
 }
 
 .content2 h5{
@@ -108,7 +108,7 @@ body{
 }
 
 .content2 p{
-    color: #fff;
+    color:white;
     font-size: 14px;
     line-height: 15px;
 }
@@ -128,7 +128,8 @@ body{
 }
 
 .img1{
-    background-image: url('indian food.jpg');
+    background-image: url('iskender.png');
+
 }
 
 .img2{
@@ -139,10 +140,10 @@ body{
     background-image: url('pizza.jpg');
 }
 
-.img4{
-    background-image: url('desi bhoj.jpg');
-}
 
 .img:hover{
     transform: translateX(-8px) translateY(-15px);
 }
+a {
+    color: white;
+  }
