--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ body{
 .content2{
     flex-basis: 50%;
     position: absolute;
-    left:30%;
+    left:25%;
     top:65%;
 }
 
@@ -141,7 +141,11 @@ body{
     background-image: url('oruk.png');
 
 }
+.img4{
 
+    background-image: url('sarma.jpg');
+
+}
 
 .img:hover{
     transform: translateX(-8px) translateY(-15px);
