--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 body{
-    background: rgba(0,0,0,0.6) url('food.jpg') center center fixed;
+    background: rgb(254, 254, 254) url('food.jpg') center center fixed;
     background-size: cover;
     background-blend-mode: darken;
 }
